# AI-Agent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
rag_agent/: agent.py  cli.py  config.py  ingest.py  llm.py  retriever.py  tools.py
tests/: test_agent.py  test_ingest.py  test_retriever.py
